DeployCSXTP_final/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.12.40.16777",
      "templateHash": "6574740441473099478"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "francecentral"
    },
    "owner": {
      "type": "string"
    },
    "approver": {
      "type": "string"
    },
    "endDate": {
      "type": "string"
    },
    "count": {
      "type": "int",
      "metadata": {
        "description": "Nombre d'instances à déployer"
      }
    }
  },
  "resources": [
    {
      "copy": {
        "name": "deploy_tp_ad",
        "count": "[length(range(0, parameters('count')))]"
      },
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2020-10-01",
      "name": "[format('{0}tpCSX', range(0, parameters('count'))[copyIndex()])]",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "owner": {
            "value": "[parameters('owner')]"
          },
          "approver": {
            "value": "[parameters('approver')]"
          },
          "endDate": {
            "value": "[parameters('endDate')]"
          },
          "VM_FE_WINDOWS_name": {
            "value": "[format('{0}_VM-CSX-TP-WINDOWS', range(0, parameters('count'))[copyIndex()])]"
          },
          "VM_BE_SERVER_name": {
            "value": "[format('{0}_VM-CSX-TP-LINUX', range(0, parameters('count'))[copyIndex()])]"
          },
          "VM_FE_LINUX_name": {
            "value": "[format('{0}_VM-CSX-TP-SERVER', range(0, parameters('count'))[copyIndex()])]"
          },
          "NSG_Name": {
            "value": "[format('{0}_nsg-CSX-TP', range(0, parameters('count'))[copyIndex()])]"
          },
          "VNET_name": {
            "value": "[format('{0}_VNET-Lab-CSX', range(0, parameters('count'))[copyIndex()])]"
          },
          "Back_End_App": {
            "value": "[format('{0}_BackEndServer', range(0, parameters('count'))[copyIndex()])]"
          },
          "Front_End_App": {
            "value": "[format('{0}_FrontEndServer', range(0, parameters('count'))[copyIndex()])]"
          },
          "RestrictVNetFlowInbound": {
            "value": "[format('{0}_RestrictVNetFlowInbound', range(0, parameters('count'))[copyIndex()])]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.12.40.16777",
              "templateHash": "9754444848584664203"
            }
          },
          "parameters": {
            "location": {
              "type": "string",
              "defaultValue": "francecentral"
            },
            "owner": {
              "type": "string"
            },
            "approver": {
              "type": "string"
            },
            "endDate": {
              "type": "string"
            },
            "VM_FE_WINDOWS_name": {
              "type": "string"
            },
            "VM_FE_LINUX_name": {
              "type": "string"
            },
            "VM_BE_SERVER_name": {
              "type": "string"
            },
            "VNET_name": {
              "type": "string"
            },
            "NSG_Name": {
              "type": "string"
            },
            "Front_End_App": {
              "type": "string"
            },
            "Back_End_App": {
              "type": "string"
            },
            "RestrictVNetFlowInbound": {
              "type": "string"
            }
          },
          "variables": {
            "ImageID_VM_FE_WINDOWS": "/subscriptions/a4038696-ce0f-492d-9049-38720738d4fe/resourceGroups/RG_Compute_Gallery/providers/Microsoft.Compute/galleries/Compute_gallery_TP/images/TP_CSX_WINDOWS_VM/versions/latest",
            "ImageID_VM_FE_LINUX": "/subscriptions/a4038696-ce0f-492d-9049-38720738d4fe/resourceGroups/RG_Compute_Gallery/providers/Microsoft.Compute/galleries/Compute_gallery_TP/images/TP_CSX_LINUX_VM/versions/latest",
            "ImageID_VM_BE_SERVER": "/subscriptions/a4038696-ce0f-492d-9049-38720738d4fe/resourceGroups/RG_Compute_Gallery/providers/Microsoft.Compute/galleries/Compute_gallery_TP/images/TP_CSX_SERVER_VM/versions/latest"
          },
          "resources": [
            {
              "type": "Microsoft.Network/applicationSecurityGroups",
              "apiVersion": "2021-05-01",
              "name": "[parameters('Front_End_App')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              }
            },
            {
              "type": "Microsoft.Network/applicationSecurityGroups",
              "apiVersion": "2021-05-01",
              "name": "[parameters('Back_End_App')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              }
            },
            {
              "type": "Microsoft.Network/publicIPAddresses",
              "apiVersion": "2020-11-01",
              "name": "[format('{0}-public-IP', parameters('VM_FE_WINDOWS_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "sku": {
                "name": "Basic",
                "tier": "Regional"
              },
              "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
              }
            },
            {
              "type": "Microsoft.Network/publicIPAddresses",
              "apiVersion": "2020-11-01",
              "name": "[format('{0}-public-IP', parameters('VM_FE_LINUX_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "sku": {
                "name": "Basic",
                "tier": "Regional"
              },
              "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
              }
            },
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2020-11-01",
              "name": "[format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "10.3.0.0/16"
                  ]
                },
                "subnets": [
                  {
                    "name": "default",
                    "properties": {
                      "addressPrefix": "10.3.0.0/24",
                      "delegations": [],
                      "privateEndpointNetworkPolicies": "Enabled",
                      "privateLinkServiceNetworkPolicies": "Enabled"
                    }
                  }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false
              }
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2020-11-01",
              "name": "[parameters('NSG_Name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "securityRules": [
                  {
                    "name": "SSH_FE_to_BE_Inbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "sourceApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "destinationPortRange": "22",
                      "destinationApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Back_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "SSH_BE_to_FE_Inbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "sourceApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Back_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "destinationPortRange": "22",
                      "destinationApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "RDP_Inbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "3389",
                      "sourceAddressPrefix": "*",
                      "destinationApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "access": "Allow",
                      "priority": 120,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "SSH_Inbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "22",
                      "sourceAddressPrefix": "*",
                      "destinationApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "access": "Allow",
                      "priority": 130,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "SSH_FE_to_BE_Outbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "sourceApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "destinationPortRange": "22",
                      "destinationApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Back_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "SSH_BE_to_FE_Outbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "sourceApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Back_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "destinationPortRange": "22",
                      "destinationApplicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                          "location": "[parameters('location')]"
                        }
                      ],
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "RestrictVNetFlowOutbound",
                    "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Deny",
                      "priority": 300,
                      "direction": "Outbound"
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Back_End_App'))]",
                "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2020-11-01",
              "name": "[format('{0}-network-interface', parameters('VM_FE_WINDOWS_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "10.3.0.5",
                      "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-public-IP', parameters('VM_FE_WINDOWS_name')))]"
                      },
                      "subnet": {
                        "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))), '2020-11-01').subnets[0].id]"
                      },
                      "primary": true,
                      "privateIPAddressVersion": "IPv4",
                      "applicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]"
                        }
                      ]
                    }
                  }
                ],
                "dnsSettings": {
                  "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-public-IP', parameters('VM_FE_WINDOWS_name')))]",
                "[resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name)))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2020-11-01",
              "name": "[format('{0}-network-interface', parameters('VM_FE_LINUX_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "10.3.0.4",
                      "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-public-IP', parameters('VM_FE_LINUX_name')))]"
                      },
                      "subnet": {
                        "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))), '2020-11-01').subnets[0].id]"
                      },
                      "primary": true,
                      "privateIPAddressVersion": "IPv4",
                      "applicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]"
                        }
                      ]
                    }
                  }
                ],
                "dnsSettings": {
                  "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Front_End_App'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', format('{0}-public-IP', parameters('VM_FE_LINUX_name')))]",
                "[resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name)))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2020-11-01",
              "name": "[format('{0}-network-interface', parameters('VM_BE_SERVER_name'))]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "privateIPAllocationMethod": "Static",
                      "privateIPAddress": "10.3.0.6",
                      "subnet": {
                        "id": "[reference(resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name))), '2020-11-01').subnets[0].id]"
                      },
                      "primary": true,
                      "privateIPAddressVersion": "IPv4",
                      "applicationSecurityGroups": [
                        {
                          "id": "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Back_End_App'))]"
                        }
                      ]
                    }
                  }
                ],
                "dnsSettings": {
                  "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                  "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]"
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/applicationSecurityGroups', parameters('Back_End_App'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', format('{0}{1}', parameters('VNET_name'), uniqueString(subscription().subscriptionId, deployment().name)))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2021-11-01",
              "name": "[parameters('VM_FE_WINDOWS_name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "hardwareProfile": {
                  "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                  "imageReference": {
                    "id": "[variables('ImageID_VM_FE_WINDOWS')]"
                  },
                  "osDisk": {
                    "name": "[format('{0}_OSdisk', parameters('VM_FE_WINDOWS_name'))]",
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                    "deleteOption": "Delete"
                  },
                  "dataDisks": []
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_FE_WINDOWS_name')))]",
                      "properties": {
                        "deleteOption": "Delete"
                      }
                    }
                  ]
                },
                "diagnosticsProfile": {
                  "bootDiagnostics": {
                    "enabled": true
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_FE_WINDOWS_name')))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2021-11-01",
              "name": "[parameters('VM_FE_LINUX_name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "hardwareProfile": {
                  "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                  "imageReference": {
                    "id": "[variables('ImageID_VM_FE_LINUX')]"
                  },
                  "osDisk": {
                    "name": "[format('{0}_OSdisk', parameters('VM_FE_LINUX_name'))]",
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                    "deleteOption": "Delete"
                  },
                  "dataDisks": []
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_FE_LINUX_name')))]",
                      "properties": {
                        "deleteOption": "Delete"
                      }
                    }
                  ]
                },
                "diagnosticsProfile": {
                  "bootDiagnostics": {
                    "enabled": true
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_FE_LINUX_name')))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2021-11-01",
              "name": "[parameters('VM_BE_SERVER_name')]",
              "location": "[parameters('location')]",
              "tags": {
                "owner": "[parameters('owner')]",
                "approver": "[parameters('approver')]",
                "endDate": "[parameters('endDate')]"
              },
              "properties": {
                "hardwareProfile": {
                  "vmSize": "Standard_B2s"
                },
                "storageProfile": {
                  "imageReference": {
                    "id": "[variables('ImageID_VM_BE_SERVER')]"
                  },
                  "osDisk": {
                    "name": "[format('{0}_OSdisk', parameters('VM_BE_SERVER_name'))]",
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                    "deleteOption": "Delete"
                  },
                  "dataDisks": []
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_BE_SERVER_name')))]",
                      "properties": {
                        "deleteOption": "Delete"
                      }
                    }
                  ]
                },
                "diagnosticsProfile": {
                  "bootDiagnostics": {
                    "enabled": true
                  }
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('{0}-network-interface', parameters('VM_BE_SERVER_name')))]"
              ]
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups/securityRules",
              "apiVersion": "2021-05-01",
              "name": "[format('{0}/{1}', parameters('NSG_Name'), parameters('RestrictVNetFlowInbound'))]",
              "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "VirtualNetwork",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Deny",
                "priority": 300,
                "direction": "Inbound"
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG_Name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('VM_BE_SERVER_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('VM_FE_LINUX_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('VM_FE_WINDOWS_name'))]"
              ]
            }
          ]
        }
      }
    }
  ]
}
